Upgrade to font awesome 5

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>SIOrigin <span class="icon fa-rocket"></span></h1>
+				<h1>SIOrigin <span class="icon fas fa-dog"></span></h1>
 				<p>Making Carnegie Mellon SIO less buggy <sup>(no pun intended)</sup>
 			</header>
 
@@ -28,12 +28,12 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="javascript:alert('Coming soon');" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://github.com/QuantumStack/SIOrigin" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:github@pillai.io" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="javascript:alert('Coming soon');" class="icon"><i class="fab fa-twitter"></i><span class="label">Twitter</span></a></li>
+					<li><a href="https://github.com/QuantumStack/SIOrigin" class="icon"><i class="fab fa-github"></i><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:github@pillai.io" class="icon"><i class="far fa-envelope-open"></i><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; QuantumStack 2018.</li><li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh, PA.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; QuantumStack 2018.</li><li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
