--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
+		<div id="particles-js"></div>
 
 		<!-- Header -->
 			<header id="header">
@@ -36,9 +37,11 @@
 					<li>&copy; QuantumStack 2018.</li><li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
+		
 
 		<!-- Scripts -->
+			<script src="assets/js/particles.js"></script>
 			<script src="assets/js/main.js"></script>
-
+		
 	</body>
 </html>
