--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 					<li><a href="mailto:github@pillai.io" class="icon"><i class="far fa-envelope-open"></i><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; QuantumStack 2018.</li><li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; QuantumStack 2018.</li>
+					<li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh.</li>
+					<!-- <li>Credits: <a href="http://html5up.net">HTML5 UP</a></li> -->
 				</ul>
 			</footer>
 		
