Stronger than hate.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<li>&copy; QuantumStack 2018.</li>
 					<li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh.</li>
 					<!-- <li>Credits: <a href="http://html5up.net">HTML5 UP</a></li> -->
+					<li>Stronger than hate. <span class="icon fa-star-of-david"></span></li>
 				</ul>
 			</footer>
 		
