--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	</head>
 	<body class="is-preload">
 		<div id="particles-js"></div>
-
+		<div id="background"></div>
 		<!-- Header -->
 			<header id="header">
 				<h1>SIOrigin <span class="icon fas fa-dog"></span></h1>
-				<p>Making Carnegie Mellon SIO less buggy <sup>(no pun intended)</sup>
+				<p>Making Carnegie Mellon SIO less buggy <sup>(no pun intended)</sup></p>
 			</header>
 
 		<!-- Signup Form -->
@@ -34,7 +34,8 @@
 					<li><a href="mailto:github@pillai.io" class="icon"><i class="far fa-envelope-open"></i><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; QuantumStack 2018.</li>
+					<li>QuantumStack &copy; 2018. 					<img src="assets/images/logo.png"/> 
+					</li>
 					<li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh.</li>
 					<!-- <li>Credits: <a href="http://html5up.net">HTML5 UP</a></li> -->
 					<li>Stronger than hate. <span class="icon fa-star-of-david"></span></li>
