Added website icon.
Signed-off-by: Aditya Pillai <github@pillai.io>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 		<title>SIOrigin | Coming soon!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
+		<link rel="shortcut icon" type="image/png" href="/assets/images/logo.png"/>
+
 	</head>
 	<body class="is-preload">
 		<div id="particles-js"></div>
