Modify particles effect
Signed-off-by: Aditya Pillai <github@pillai.io>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body class="is-preload">
 		<div id="particles-js"></div>
-		<div id="background"></div>
+		<!-- <div id="background"></div> -->
 		<!-- Header -->
 			<header id="header">
 				<h1>SIOrigin <span class="icon fas fa-dog"></span></h1>
