Remove trailing periods
Signed-off-by: Aditya Pillai <github@pillai.io>

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 					<li><a href="mailto:github@pillai.io" class="icon"><i class="far fa-envelope-open"></i><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>QuantumStack &copy; 2018. 					<img src="assets/images/logo.png"/> 
+					<li>&copy; QuantumStack 
+						<img src="assets/images/logo.png"/> 
+						2018
 					</li>
-					<li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh.</li>
+					<li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh</li>
 					<!-- <li>Credits: <a href="http://html5up.net">HTML5 UP</a></li> -->
-					<li>Stronger than hate. <span class="icon fa-star-of-david"></span></li>
+					<li>Stronger than hate <span class="icon fa-star-of-david"></span></li>
 				</ul>
 			</footer>
 		
