Added scotty dog

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- <div id="background"></div> -->
 		<!-- Header -->
 			<header id="header">
-				<h1>SIOrigin <span class="icon fas fa-dog"></span></h1>
+				<h1>SIOrigin <img src="assets/images/logo.png"/></h1>
 				<p>Making Carnegie Mellon SIO less buggy <sup>(no pun intended)</sup></p>
 			</header>
 
@@ -37,7 +37,7 @@
 				</ul>
 				<ul class="copyright">
 					<li>&copy; QuantumStack 
-						<img src="assets/images/logo.png"/> 
+						<img src="assets/images/quantumstack.png"/> 
 						2018
 					</li>
 					<li>Made with <span class="icon fa-heart"></span> and <span class="icon fa-coffee"></span> in Pittsburgh</li>
