--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="shortcut icon" type="image/png" href="/assets/images/logo.png"/>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133196682-4"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
+		gtag('config', 'UA-133196682-4');
+		</script>
 	</head>
 	<body class="is-preload">
 		<div id="particles-js"></div>
